k8s/applications/js-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: js-gateway
  namespace: default
  labels:
    app: js-gateway
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: js-gateway
