k8s/applications/js-gateway/ingress-swagger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-docs-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api-docs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: js-gateway
            port:
              number: 8082
